--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 /node_modules
+/package-lock.json
 
 # dependencies
 /client/node_modules
 /client/.pnp
 .pnp.js
+/client/yarn.lock
 
 # testing
 /client/coverage
