--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
     "path": "^0.12.7"
   },
