--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "http": "^0.0.1-security",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {},
   "author": "",
